# omp-dotenv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: release.yml
include/: omp-dotenv.inc
lib/samp-sdk/: plugincommon.h
src/: component.cpp  dotenv.cpp  dotenv.hpp  natives.cpp  natives.hpp  plugin.cpp
test/: sample.env  test.pwn
